updates:fixed wishlist routes and annotation
